调整了登录/用户中心

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="expires" content="0">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <title></title>
-    <script src="getServerApi.js"></script>
+    <!--<script src="getServerApi.js"></script>-->
     <!--<script>-->
       <!--window.API_HOST = 'http://test.h5.phone.t.ebao123.com/index.php?s=/H5/'-->
     <!--</script>-->
