--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="expires" content="0">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <title></title>
+    <script>!function(){var e;function t(){var e=window.document.documentElement.getBoundingClientRect().width,t=e>640?64:e/10;window.document.documentElement.style.fontSize=t+"px"}window.addEventListener("resize",function(){clearTimeout(e),e=setTimeout(t,300)},!1),window.addEventListener("pageshow",function(n){n.persisted&&(clearTimeout(e),e=setTimeout(t,300))},!1),"complete"===window.document.readyState?window.document.body.style.fontSize="12px":window.addEventListener("DOMContentLoaded",function(e){window.document.body.style.fontSize="12px"},!1),t()}();</script>
     <!--<script src="getServerApi.js"></script>-->
     <!--<script>-->
       <!--window.API_HOST = 'http://test.h5.phone.t.ebao123.com/index.php?s=/H5/'-->
