--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <link rel="icon" href="<%= BASE_URL %><%= process.env.APP_ICON %>">
     <title><%= process.env.APP_NAME %></title>
-  </head>
-  <body>
-  <noscript>
+<!--    <script src="https://cdn.staticfile.org/vConsole/3.3.2/vconsole.min.js"></script>-->
+<!--    <script>-->
+<!--      new VConsole()-->
+<!--    </script>-->
+</head>
+<body>
+<noscript>
     <strong>很抱歉，在没有启用JavaScript的情况下不能正常工作。</strong>
-  </noscript>
-    <div id="app"></div>
-  </body>
+</noscript>
+<div id="app"></div>
+</body>
 </html>
